--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@architect/sandbox": "^1.8.3"
   }
 }
